--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,10 @@
     <string name="my_card">My Card</string>
     <string name="na">NA</string>
 
+    <!-- for OTP Screen -->
+    <string name="sec">Sec</string> <!-- for seconds -->
+    <string name="counter"> To resend the code</string> <!-- to till use the time remaining to resend the code -->
+    <string name="resend_pin"><u>Resend now</u></string>
+    <string name="code_resent">Code Re-sent</string>
+
 </resources>
