--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Eyal Zayed</string>
+    <string name="app_name">Zayed Son\'s</string>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
